favicon logo changed to .png, correct paddings/margins for topbar, correct size for input fields, added gap beetween number and icon in topbar

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -58,6 +58,7 @@
   width: auto;
   max-width: 600px;
   margin-right: 0;
+  padding-right: 12px;
 
   font-size: 12px;
   font-weight: 700;
