--- a/src/styles/blocks/topbar.scss
+++ b/src/styles/blocks/topbar.scss
@@ -3,17 +3,17 @@
   align-items: center;
   justify-content: space-between;
 
-  margin-bottom: 56px;
+  margin-bottom: 32px;
   padding-block: 24px;
 
   @include on-tablet {
-    padding-bottom: 32px;
-    padding-block: 32px 72px;
+    margin-bottom: 56px;
+    padding-block: 32px;
   }
 
   @include on-desktop {
-    padding-bottom: 32px;
-    padding-block: 32px 120px;
+    margin-bottom: 56px;
+    padding-block: 32px;
   }
 
   &__icons {
